--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STANDARD_MADE_MINT }}'
-          projectId: standard-made-mint
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STANDARD_MADE_NFT }}'
+          projectId: standard-made-nft
