--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "standard-made-mint",
-  "version": "0.1.0",
+  "name": "standard-made-nft",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
