--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "STANDARDmade",
-  "name": "STANDARDmade NFTs",
+  "short_name": "kITt:",
+  "name": "STANDARDmade",
   "icons": [
     {
       "src": "favicon.ico",
