--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standard-made",
+  "name": "kitt",
   "version": "0.1.2",
   "private": true,
   "dependencies": {
@@ -54,6 +54,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.4",
+    "firebase-tools": "^11.16.1",
     "hardhat": "^2.9.3",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
