--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "kitt",
-  "version": "0.1.2",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
-    "@emailjs/browser": "^3.6.2",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/react": "^2.4.2",
+    "@emailjs/browser": "^3.10.0",
     "@iconscout/react-unicons": "^1.1.6",
-    "@openzeppelin/contracts": "^4.6.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@openzeppelin/contracts": "^4.8.0",
+    "ethers": "^5.7.2",
     "firebase": "^9.14.0",
-    "framer-motion": "^3.7.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
-    "swiper": "^8.1.5"
+    "framer-motion": "^6.5.0",
+    "prettier": "^2.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-plx": "^2.0.1",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
+    "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -46,27 +44,29 @@
     ]
   },
   "devDependencies": {
-    "@metamask/detect-provider": "^1.2.0",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^10.0.0",
-    "ethereum-waffle": "^3.4.4",
     "firebase-tools": "^11.16.1",
-    "hardhat": "^2.9.3",
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
+    "npm-force-resolutions": "^0.0.10",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
-    "react-plx": "^1.3.17",
+    "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "swiper": "^8.4.5",
     "url": "^0.11.0"
   },
   "resolutions": {
-    "react-scripts/webpack": "5.72.0"
+    "react-scripts/webpack": "5.70.0"
   }
 }
