--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
   "name": "kitt",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "SEE LICENSE IN STANDARDmade, LLC",
   "dependencies": {
-    "@chakra-ui/react": "^2.4.2",
+    "@chakra-ui/react": "^2.4.3",
     "@emailjs/browser": "^3.10.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@iconscout/react-unicons": "^1.1.6",
     "@openzeppelin/contracts": "^4.8.0",
     "ethers": "^5.7.2",
     "firebase": "^9.14.0",
-    "framer-motion": "^6.5.0",
+    "framer-motion": "^7.6.19",
     "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-plx": "^2.0.1",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "webpack": "^5.75.0"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
+    "cypress:open": "cypress open",
     "prettier-watch": "onchange '**/*.js' -- prettier --write {{changed}}",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,7 +49,9 @@
   },
   "devDependencies": {
     "crypto-browserify": "^3.12.0",
+    "cypress": "^12.0.1",
     "https-browserify": "^1.0.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "os-browserify": "^0.3.0",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.1",
@@ -53,6 +59,10 @@
     "stream-http": "^3.2.0"
   },
   "resolutions": {
-    "react-scripts/webpack": "5.70.0"
+    "react-scripts/webpack": "5.75.0",
+    "mini-css-extract-plugin": "2.7.2"
+  },
+  "overrides": {
+    "mini-css-extract-plugin": "2.7.2"
   }
 }
