--- a/.github/workflows/firebase-hosting-build-deploy.yml
+++ b/.github/workflows/firebase-hosting-build-deploy.yml
@@ -1,5 +1,5 @@
 name: Build and Deploy
-on:
+'on':
   push:
     branches:
       - master
@@ -37,6 +37,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: build
+          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
